Tests/Runtime2/Error/Chain/.build/alwaysfails.pr
[
  {
    "name": "AlwaysFails",
    "description": "Compiles the goal step to an error throw action that always fails.",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "throw error \u0022always fails\u0022",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "error",
            "action": "throw",
            "parameters": [
              {
                "name": "Message",
                "value": "always fails",
                "type": "string"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/AlwaysFails.goal",
    "prPath": "/.build/alwaysfails.pr",
    "hash": "a91369207d3e67d7d3fbc2cc7a0fc4e6f2a7558d1ae6c543d01237f04ad35098",
    "builderVersion": "0.3",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]